# viber

./: .viber_graph_dump.json  DESIGN_API.md  DESIGN_BACKEND.md  DESIGN_FRONTEND.md  PROJECT.backend.md  PROJECT.md  package.json  pnpm-lock.yaml
.viber/: config.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md
docs/contracts/: be-be.md  fe-be.md  fe-fe.md
docs/features/: 01-project.md  02-graph.md  03-flow.md  04-git.md  05-guardrail.md  06-score.md  07-context.md  08-mcp.md  09-ux.md
docs/modules/backend/: context.md  flow.md  git.md  graph.md  guardrail.md  mcp.md  parser.md  project.md  score.md  watcher.md
docs/modules/frontend/: context.md  flow.md  git.md  graph.md  guardrail.md  project.md  score.md  shell.md
src/: App.tsx  build-windows.sh  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: zig-dlltool.sh  zigcc-x86_64-windows-gnu.sh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/git/: commands.rs  mod.rs  service.rs
src-tauri/src/domain/graph/: builder.rs  commands.rs  diff.rs  mod.rs  service.rs
src-tauri/src/domain/project/: commands.rs  config.rs  mod.rs  service.rs
src-tauri/src/infra/: mod.rs
src-tauri/src/infra/parser/: csharp.rs  dart.rs  go.rs  mod.rs  python.rs  rust.rs  typescript.rs
src-tauri/src/infra/watcher/: mod.rs
src-tauri/src/shared/: error.rs  event.rs  mod.rs  types.rs
src/domains/git/: index.ts  store.ts
src/domains/graph/: index.ts  store.ts
src/domains/project/: index.ts  store.ts
src/types/: cytoscape-cose-bilkent.d.ts
(+66 files in other folders)
