[package]
name = "viber"
version = "0.1.0"
description = "Viber — Vibe Coding Modularization Helper"
authors = ["Yooshin"]
edition = "2021"

[lib]
name = "viber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
petgraph = "0.6"
